--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,28 @@ body > #root {
   font-family: Neue;
   src: url('../public/fonts/PPNeueMachina-Regular.woff2') format('woff2');
 }
+
+
+/* Style for the link */
+#navItem {
+  position: relative;
+  line-height: 60px;
+}
+
+#navItem::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+  width: 100%;
+  height: 2px;
+  background-color: #B7E82E; 
+  transform: scaleX(0);
+  transform-origin: right; 
+  transition: transform 0.3s ease-out;
+}
+
+#navItem:hover::before {
+  transform: scaleX(1); 
+  transform-origin: left; 
+}
